--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header{
-background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2)), url(images/leaf.jpg);
+background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2)), url(leaf.jpg);
 background-size: cover;
 background-position: center top;
 background-attachment: fixed;
